@@ -321,6 +321,7 @@ enum {
   W_ENUM_INT_RANGE_C2X          = 291, /* enumeration constant outside the range of int requires ISO C2X or later */
   E_Z88DK_CALLEE_VARARG         = 292, /* __z88dk_callee with variable arguments not supported */
   W_CODEMEM_WRITE               = 293, /* attempt to write to read-only-memory */
+  W__SDCC_EXTERNAL_STARTUP_DEF  = 294, /* _sdcc_external_startup function definition - possible deprecated old-style variant of __sdcc_external_startup */
 
   /* don't touch this! */
   NUMBER_OF_ERROR_MESSAGES             /* Number of error messages */
